welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value ab
  if(ab=10){
     ^blueTicket:5: error: not found: value bc
  if(bc=10){
     ^blueTicket:8: error: not found: value ac
  if (ac=10){
      ^blueTicket:8: error: type mismatch;
 found   : Unit
 required: Int
  if (ac=10){
  ^