welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
  if(ab=10){
    return 10
  }
  if(bc=10){
    return 10
  }
  if (ac=10){
    return 10
  }
}